# jupyter-k8s

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .roborev.toml  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT  README.md  go.mod  go.sum  kind-config.yaml  pyproject.toml  readiness-probes-plan.md  requirements.txt  test-ebs-pod.yaml  test-encrypted-ebs.yaml  test-jupyter-workspace.yaml  test-pods.yaml  test-workspace.yaml  tools.go
.devcontainer/: post-install.sh
.github/: AGENT.md
.github/workflows/: ci.yml  lint.yml  operator-tests.yml  release-e2e.yml  release-promote-chart.yml  release-promote-images.yml  release-stage-chart.yml  release-stage-images.yml  release.yml  roborev-review.yml  test-chart-aws-traefik-dex.yml  test-chart.yml  test-e2e.yml  test-release.yml  test.yml  unit-tests.yml  verify-generated.yml
api/v1alpha1/: groupversion_info.go  jupyterserver_types.go  shared_types.go  workspace_types.go  workspaceaccessstrategy_types.go  workspaceintegration_types.go  workspaceintegrationstrategy_types.go  workspaceintegrationtemplate_types.go  workspacetemplate_types.go  (+1 more)
cmd/: main.go
config-auth/: README.md
diagrams/: AGENT.md  architecture-overview.d2  jwt-lifecycle.d2  jwt-read.d2  plugin-dispatch.d2  web-access-bearer-token.d2  web-access-oidc.d2
docs/: AGENT.md  requirements.txt
examples/: sample-notebook.yaml  test-template-rejection.yaml
hack/: README.md  apply-helm-patches.sh  boilerplate.go.txt
images/: Makefile  README.md
scripts/: verify_format.py
tests/: __init__.py
(+1039 files in other folders)
