[project]
name = "jupyter-k8s"
version = "0.1.0"
description = "Kubernetes custom operator to deploy jupyter-server to clusters."
readme = "README.md"
authors = [
    { name = "Jonathan Guinegagne", email = "jggg@amazon.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kopf>=1.38.0",
    "kubernetes>=33.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
jupyter-k8s = "jupyter_k8s.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
mypy_path = ["."]
packages = ["jupyter_k8s", "tests"]

# Ignore untyped imports for kubernetes
# [[tool.mypy.overrides]]
# module = "kubernetes.*"
# ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pydocstyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I"   # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

docstring-code-format = true
docstring-code-line-length = 40

[tool.uv.workspace]
members = [
    "build_temp",
]
